[gd_scene load_steps=5 format=3 uid="uid://lskacgag4g8a"]

[ext_resource type="Script" path="res://addons/godot-screenreader/menu/ax/scripts/screenreader_options_control.gd" id="1_1ccn0"]
[ext_resource type="Script" path="res://addons/godot-screenreader/scripts/object_scripts/ax_label.gd" id="2_mciky"]
[ext_resource type="Script" path="res://addons/godot-screenreader/scripts/object_scripts/ax_checkbutton.gd" id="3_cu8qf"]
[ext_resource type="Script" path="res://addons/godot-screenreader/scripts/object_scripts/ax_optionbutton.gd" id="4_sikc4"]

[node name="OptionsControl" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1ccn0")

[node name="Screenreader" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Screenreader"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="Screenreader/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Theme Options"

[node name="THEME" type="Control" parent="Screenreader/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="VBoxContainer" type="HBoxContainer" parent="Screenreader/VBoxContainer/THEME"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Screenreader/VBoxContainer/THEME/VBoxContainer"]
layout_mode = 2
text = "Contrast Theme"
script = ExtResource("2_mciky")
ignore = true

[node name="THEME" type="OptionButton" parent="Screenreader/VBoxContainer/THEME/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
flat = true
item_count = 3
popup/item_0/text = "None"
popup/item_1/text = "High Contrast (Dark)"
popup/item_1/id = 1
popup/item_2/text = "High Contrast (Light)"
popup/item_2/id = 2
script = ExtResource("4_sikc4")
alt_text = "Contrast Theme"

[node name="Label2" type="Label" parent="Screenreader/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Video Options"

[node name="SUBTITLES" type="Control" parent="Screenreader/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="VBoxContainer" type="HBoxContainer" parent="Screenreader/VBoxContainer/SUBTITLES"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Screenreader/VBoxContainer/SUBTITLES/VBoxContainer"]
layout_mode = 2
text = "Subtitles"
script = ExtResource("2_mciky")
ignore = true

[node name="SUBTITLES" type="CheckButton" parent="Screenreader/VBoxContainer/SUBTITLES/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
flat = true
script = ExtResource("3_cu8qf")
alt_text = "Subtitles"

[connection signal="item_selected" from="Screenreader/VBoxContainer/THEME/VBoxContainer/THEME" to="." method="_on_theme_item_selected"]
[connection signal="toggled" from="Screenreader/VBoxContainer/SUBTITLES/VBoxContainer/SUBTITLES" to="." method="_on_subtitles_toggled"]
